# Assignment-2

./: .gitignore  README.md  fix_robostack_macos.sh
.github/workflows/: autograde.yml  check_submission.yml
src/a2_common/: CMakeLists.txt  package.xml
src/a2_common/a2_common/: __init__.py  colors.py  grid_utils.py  laser_scan.py  math_utils.py  metrics.py  motion_models.py  ros2_utils.py  world_generation.py
src/mujoco_ros2_bridge/: CMakeLists.txt  package.xml
src/mujoco_ros2_bridge/config/: bridge_params.yaml
src/mujoco_ros2_bridge/models/panda/: ros2_scene.xml
src/mujoco_ros2_bridge/mujoco_ros2_bridge/: __init__.py
src/mujoco_ros2_bridge/scripts/: bridge_node.py  mujoco_sim_node.py  turtlebot_bridge_node.py
src/q1/: CMakeLists.txt  package.xml
src/q1/config/: occupancy_mapper.rviz  sim_params.yaml
src/q1/launch/: turtlebot_bringup.launch.py
src/q1/models/: turtlebot_scene.xml
src/q1/q1/: occupancy_grid.py
src/q1/scripts/: occupancy_mapper_node.py  pure_pursuit_node.py  rviz_marker_node.py  test_occupancy_mapper.py
src/q2/: CMakeLists.txt  package.xml
src/q2/launch/: q2_bayes_localization.launch.py
src/q2/models/: turtlebot_scene_q2_asymmetric.xml
src/q2/scripts/: bayes_localizer.py  test_bayes_localizer.py
src/q3/: CMakeLists.txt  package.xml
src/q3/launch/: q3_rrt_planning.launch.py
src/q3/scripts/: rrt_planner.py  test_rrt_planner.py
